// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Address UU5.Bricks.Address docKit example 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text=" Stanley Stalion Sunny Street 42 Savannah States "
  />
</address>
`;

exports[`UU5.Bricks.Address checkGrammar=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address checkGrammar=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address checkHighlight=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address checkHighlight=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address checkSpaces=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address checkSpaces=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address className="my-classname" 1`] = `
<address
  className="uu5-bricks-address my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address content="This is Content from ContentMixin" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</address>
`;

exports[`UU5.Bricks.Address content=12345 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</address>
`;

exports[`UU5.Bricks.Address controlled=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address controlled=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address default props 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address disabled=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address disabled=true 1`] = `
<address
  className="uu5-bricks-address uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</address>
`;

exports[`UU5.Bricks.Address dynamic=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address dynamic=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address hidden=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address hidden=true 1`] = `
<address
  className="uu5-bricks-address uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address id="myId" 1`] = `
<address
  className="uu5-bricks-address"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address ignoreHTML=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address ignoreHTML=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address mainAttrs=undefined 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address name="myName" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address noIndex=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address noIndex=true 1`] = `
<address
  className="uu5-bricks-address uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address selected=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address selected=true 1`] = `
<address
  className="uu5-bricks-address uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address style="padding:8px; borderRadius: 2px" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Address style={"backgroundColor":"red","color":"blue"} 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Address textCorrector=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address textCorrector=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Address tooltip="My Tooltip" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
